<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_filter_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_by_popular"
                    android:checked="true"
                    android:title="@string/popular_movies" />
                <item
                    android:id="@+id/filter_by_top_rated"
                    android:title="@string/top_rate_movies" />
                <item
                    android:id="@+id/filter_by_favorite"
                    android:title="@string/favorite_movies" />
            </group>
        </menu>
    </item>
</menu>