<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tabanim_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondary" />
                <TextView
                    android:id="@+id/option_selected_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_movies"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondary" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movies_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
<!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:id="@+id/mainLayout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fitsSystemWindows="true"-->
<!--    android:orientation="vertical" >-->

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
<!--            android:id="@+id/collapsing_toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:fitsSystemWindows="true"-->
<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed">-->

<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:id="@+id/toolbar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--                app:layout_collapseMode="pin"-->
<!--                app:theme="@style/ToolBarStyle" />-->
<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->


<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/movies_recyclerview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:nestedScrollingEnabled="true"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp" />-->
<!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/mainLayout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <TextView-->
<!--        android:id="@+id/app_title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="30sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--    <Spinner-->
<!--        android:id="@+id/options_spinner"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/app_title" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/movies_recyclerview"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/options_spinner" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->